utilize remote theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,23 @@
 # Configurations
-title:            Jekyll Gitbook
-longtitle:        Jekyll Gitbook
-author:           HE Tao
-email:            sighingnow@gmail.com
+title:            programme.lv docs
+longtitle:        programme.lv documentation
+author:           Krišjānis Petručeņa
+email:            krisjanispetrucena@gmail.com
 description: >
-  Build Jekyll site with the GitBook style.
-
-version:          1.0
-gitbook_version:  3.2.3
+  programme.lv documentation
 
 url:              ''
 baseurl:          ''
 rss:              RSS
 
 # bootstrap: use the remote theme for the site itself
-remote_theme: sighingnow/jekyll-gitbook
+remote_theme: KrisjanisP/kp-jekyll-gitbook
 
 toc:
   enabled: true
   h_min: 1
   h_max: 3
 
-# customize the link favicon in header, will be {{site.baseurl}}/{{site.favicon_path}}
 favicon_path:     /assets/gitbook/images/favicon.ico
 
 # markdown render engine.
@@ -43,9 +39,6 @@ markdown_ext:             markdown,mkdown,mkdn,mkd,md
 # Permalinks
 permalink:                /:categories/:year-:month-:day-:title:output_ext
 
-# Disqus comments
-# disqushandler:            sighingnow
-
 exclude:
   - _drafts
 
@@ -64,3 +57,4 @@ plugins:
   - jekyll-feed
   - jekyll-readme-index
   - jemoji
+  - jekyll-remote-theme
